--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "inventory_app",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -9,6 +10,7 @@
     "bootstrap": "4.3.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "sweetalert2": "^10.12.6",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
