--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "4.3.1",
+    "bootstrap4c-chosen": "^1.1.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "sweetalert2": "^10.12.6",
